--- a/index.html
+++ b/index.html
@@ -11,6 +11,57 @@
 </head>
 
 <body>
+    <header>
+        <a href="/">
+            <img src="/assets/logo-dark.svg"
+             alt="GS Home" 
+             width="111"
+             height="28"
+            />
+        </a>
+
+        <a href="" class="button dark">
+            Get Started
+        </a>
+    </header>
+
+    <main>
+        <section class="hero"> //Grid parent
+            // Create the hero text
+            <div class="hero__text">
+                <h1>Maximise skill, minimize budget</h1>
+                <p>
+                    Our courses span accross a range of in-demand
+                    skills and will give you the knowledge you need 
+                    to get your dream job.
+                </p>
+
+                <a href="" class="button pink">Get Started</a>
+            </div>
+
+            // Create the hero image
+            <picture>
+                <source media="(min-width: 75em)"
+                 srcset="/assets/image-hero-desktop@2x.webp"
+                 width="695"
+                 height="723"
+                />
+
+                <source media="(min-width: 50em)"
+                 srcset="/assets/image-hero-tablet@2x.webp"
+                 width="695"
+                 height="723"
+                />
+
+                <img src="/assets/image-hero-mobile@2x.webp" 
+                width="870"
+                height="818"
+                alt="woman with coffee mug and laptop,
+                with labels reading Members 29k, course hours 1451" />
+            </picture>
+        </section>
+    </main>
+
     Hi, something is coming soon.
 </body>
 </html>
