--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </header>
 
     <main>
-        <section class="hero"> //Grid parent
-            // Create the hero text
+        <!-- Grid parent -->
+        <section class="hero"> 
+            <!-- Create the hero text -->
             <div class="hero__text">
                 <h1>Maximise skill, minimize budget</h1>
                 <p>
@@ -39,8 +40,8 @@
                 <a href="" class="button pink">Get Started</a>
             </div>
 
-            // Create the hero image
-            <picture>
+            <!-- Create the hero image -->
+            <!-- <picture>
                 <source media="(min-width: 75em)"
                  srcset="/assets/image-hero-desktop@2x.webp"
                  width="695"
@@ -58,7 +59,7 @@
                 height="818"
                 alt="woman with coffee mug and laptop,
                 with labels reading Members 29k, course hours 1451" />
-            </picture>
+            </picture> -->
         </section>
     </main>
 
